# zkp-from-scratch

./: LICENSE  README.md  commit  commit.sh  zkp
zkp-from-scratch/: Cargo.toml  debug_cargo_error.txt
zkp-from-scratch/src/: main.rs
zkp-from-scratch/src/interactive/: schnorr.rs  sigma.rs
zkp-from-scratch/src/non-interactive/: finite-field.rs
