[package]
name = "zkp-from-scratch"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
rug = "1.27"
ff = "0.13"
group = "0.13"
rand = "0.9"
rand_chacha = "0.3"
subtle = "2.6"
blake2 = "0.10"
sha2 = "0.10"
digest = "0.10"
hmac = "0.12"
hkdf = "0.12"
merlin = "3.0"
ark-ff = "0.5"
ark-poly = "0.5"
ark-std = "0.5"
ark-ec = "0.5"
curve25519-dalek = "4.1"
pairing = "0.23"
fffft = "0.4"
rayon = "1.10"
tokio = { version = "1.43", features = ["full"] }
criterion = "0.4"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
